# MBProto

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: AuthKey.h  Client.h  Connection.h  Session.h  Storage.h  util.h
include/tl/: TLObject.h  bare.h
include/tl/functions/: account.h  auth.h  base.h  bots.h  channels.h  contacts.h  folders.h  help.h  langpack.h  messages.h  payments.h  phone.h  photos.h  stats.h  stickers.h  updates.h  upload.h  users.h
include/tl/types/: account.h  auth.h  base.h  channels.h  contacts.h  help.h  messages.h  payments.h  phone.h  photos.h  stats.h  stickers.h  storage.h  updates.h  upload.h
include/transports/: TCP.h  Transport.h  tcp.h
include/utils/: packing.h  streams.h
parser/: CMakeLists.txt  main.cpp
parser/assets/: mtproto_api.tl  telegram_api.tl
sqlite3/: CMakeLists.txt
src/: AuthKey.cpp  Client.cpp  Connection.cpp  Session.cpp  Storage.cpp  util.cpp
src/tl/: TLObject.cpp  bare.cpp
src/tl/functions/: account.cpp  auth.cpp  base.cpp  bots.cpp  channels.cpp  contacts.cpp  folders.cpp  help.cpp  langpack.cpp  messages.cpp  payments.cpp  phone.cpp  photos.cpp  stats.cpp  stickers.cpp  updates.cpp  upload.cpp  users.cpp
src/tl/types/: account.cpp  auth.cpp  base.cpp  channels.cpp  contacts.cpp  help.cpp  messages.cpp  payments.cpp  phone.cpp  photos.cpp  stats.cpp  stickers.cpp  storage.cpp  updates.cpp  upload.cpp
src/transports/: TCP.cpp  Transport.cpp  tcp.cpp
src/utils/: packing.cpp  streams.cpp
